Implements GET /api/adb/version (backend only), Fixs test data (curl)  to not use TLS
